--- a/index.html
+++ b/index.html
@@ -1,2 +1,80 @@
-<h1>This is the website</h1>
-<h2>edit</h2>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Capture GPS Location</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
+    #locationInfo {
+      margin-top: 20px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <h1>GPS Location Capture</h1>
+  
+  <!-- Location Section -->
+  <h3>Your Current Location</h3>
+  <div id="locationInfo">
+    <p><strong>Latitude:</strong> <span id="latitude">Fetching...</span></p>
+    <p><strong>Longitude:</strong> <span id="longitude">Fetching...</span></p>
+  </div>
+  
+  <form id="locationForm" action="your-server-endpoint" method="POST">
+    <input type="hidden" name="latitude" id="latitudeInput">
+    <input type="hidden" name="longitude" id="longitudeInput">
+    <button type="submit">Submit Location</button>
+  </form>
+
+  <script>
+    function getCurrentLocation() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(
+          (position) => {
+            const lat = position.coords.latitude;
+            const lng = position.coords.longitude;
+
+            // Display the location
+            document.getElementById("latitude").textContent = lat;
+            document.getElementById("longitude").textContent = lng;
+
+            // Update the hidden form inputs
+            document.getElementById("latitudeInput").value = lat;
+            document.getElementById("longitudeInput").value = lng;
+          },
+          (error) => {
+            let message;
+            switch (error.code) {
+              case error.PERMISSION_DENIED:
+                message = "User denied the request for Geolocation.";
+                break;
+              case error.POSITION_UNAVAILABLE:
+                message = "Location information is unavailable.";
+                break;
+              case error.TIMEOUT:
+                message = "The request to get user location timed out.";
+                break;
+              default:
+                message = "An unknown error occurred.";
+                break;
+            }
+            alert("Error: " + message);
+          }
+        );
+      } else {
+        alert("Geolocation is not supported by this browser.");
+      }
+    }
+
+    // Trigger location fetching when the page loads
+    window.onload = getCurrentLocation;
+  </script>
+</body>
+</html>
