--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>iPhone GPS Location Test</title>
+  <title>Google Form with GPS</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
     }
-    #locationInfo {
+    #formContainer {
       margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <h1>iPhone GPS Location Test</h1>
-  <div id="locationInfo">
-    <p><strong>Latitude:</strong> <span id="latitude">Fetching...</span></p>
-    <p><strong>Longitude:</strong> <span id="longitude">Fetching...</span></p>
+  <h1>Google Form with GPS Location</h1>
+  <p>Fetching your current location...</p>
+  
+  <!-- Embedded Google Form -->
+  <div id="formContainer">
+    <iframe id="googleForm" width="100%" height="600" frameborder="0"></iframe>
   </div>
 
   <script>
-    // Function to automatically fetch the user's location on page load
     function getCurrentLocation() {
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(
@@ -28,9 +29,13 @@
             const lat = position.coords.latitude;
             const lng = position.coords.longitude;
 
-            // Display the location
-            document.getElementById("latitude").textContent = lat;
-            document.getElementById("longitude").textContent = lng;
+            // Build the Google Form URL with GPS coordinates
+            const formBaseUrl = "https://docs.google.com/forms/d/e/1FAIpQLScqkGe6Jc1cnD3qXUvu3Al3Tayry70qFpbwuK6aa-gc5ttSnQ/viewform";
+            const gpsField = "entry.1127287054"; // Replace with your Google Form's field entry ID
+            const formUrl = `${formBaseUrl}?${gpsField}=${encodeURIComponent(`Lat: ${lat}, Lng: ${lng}`)}`;
+
+            // Embed the form with the GPS data
+            document.getElementById("googleForm").src = formUrl;
           },
           (error) => {
             let message;
