--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <!-- Embedded Google Form -->
-  <iframe id="googleForm" width="100%" height="600" frameborder="0"></iframe>
+  <iframe id="googleForm"></iframe>
   <script>
     function getCurrentLocation() {
       if (navigator.geolocation) {
