--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <title>Google Form with GPS</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
     }
-    #formContainer {
-      margin-top: 20px;
+    #googleForm {
+      width: 100%;
+      height: 100%;
+      border: none;
     }
   </style>
 </head>
